samples/_failures_safe/1761722184_8e0ddb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_45c32d3a.c:163:1: error: expected identifier or ‘(’ at end of input
  163 | const char
      | ^~~~~
